--- a/tmux.conf
+++ b/tmux.conf
@@ -22,10 +22,10 @@ bind-key -n C-w kill-pane
 #    Ctrl b - to open new horizontal split
 #    Ctrl b _ to open new horizontal split in current directory
 
-bind \ split-window -h 
-bind | split-window -h -c '#{pane-current_path}'
-bind - split-window 
-bind _ split_window -c '#{pane_current_path}'
+# bind \ split-window -h 
+# bind | split-window -h -c '#{pane-current_path}'
+# bind - split-window 
+# bind _ split_window -c '#{pane_current_path}'
 
 set -g @plugin 'tmux-plugins/tpm'
 # PLUGINS GO HERE!!!
@@ -33,6 +33,9 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible
 # ctrl h,j,k,l to switch splits :wq
 set -g @plugin 'christoomey/vim-tmux-navigator'
+# theme powerline yellow 
+set -g @themepack 'block/yellow'
+set -g @plugin 'jimeh/tmux-themepack'
 run '~/dotfiles/tpm/tpm'
 
 
