remove ignored files from repo

--- a/tmux.conf
+++ b/tmux.conf
@@ -9,6 +9,19 @@ set -g status-position top
 set -g base-index 1 
 set -g pane-base-index 1 
 set -g renumber-windows on 
+
+# cjt additions
+# allow mouse scrolling? 
+set -g mode-mouse on 
+# allow mouse to select pane focus 
+# set -g mouse-select-pane on 
+# allow mouse dragging to resize panes 
+# set -g mouse-resize-pane on 
+# allow mouse to select window 
+# set -g mouse-select-window on 
+
+# /cjt additions
+
 # ctrl t to open new tab 
 # crtl T to open new tab in same directory 
 # ctrl w to close pane (and tab if only one page) 
@@ -22,10 +35,10 @@ bind-key -n C-w kill-pane
 #    Ctrl b - to open new horizontal split
 #    Ctrl b _ to open new horizontal split in current directory
 
-# bind \ split-window -h 
-# bind | split-window -h -c '#{pane-current_path}'
-# bind - split-window 
-# bind _ split_window -c '#{pane_current_path}'
+bind \ split-window -h 
+bind | split-window -h -c '#{pane-current_path}'
+bind - split-window 
+bind _ split_window -c '#{pane_current_path}'
 
 set -g @plugin 'tmux-plugins/tpm'
 # PLUGINS GO HERE!!!
